tests/pass/0056_nested_if_else.ee
fn main() {
    if (true) {
        if (false) {
            debugPrint(1);
        } else {
            debugPrint(2);
        }
    } else {
        debugPrint(3);
    }
}
