tests/fail/0030_unknown_variable_in_else_if_condition.ee
fn main() {
    if (false) {
        debugPrint(1);
    } else if (missing) {
        debugPrint(2);
    }
}
